# angr-rule-learning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  candidate-format.md  extractor-build-environment.md  rule-format.md  rule-generalization.md  verifier.md
docs/superpowers/plans/: 2026-06-09-verifier-core-memory-mvp.md  2026-06-10-verifier-semantic-completeness-implementation.md  2026-06-11-extractor-first-pipeline-implementation.md  2026-06-11-liveness-surface-implementation.md  2026-06-11-rule-generalization-implementation.md  2026-06-14-memory-rule-learning-implementation.md  2026-06-15-indexed-memory-addressing-implementation.md  2026-06-16-current-yield-fixes.md  (+11 more)
examples/: aarch64_x86_64_add.json  aarch64_x86_64_batch.jsonl
samples/sources/: indexed_memory_int.c  memory_int.c  rich_int.c  smoke_int.c
scripts/: run_all_tests.sh
src/angr_rule_learning/: __init__.py  cli.py  models.py  verifier.py
tests/: test_analysis_cli.py  test_analysis_skip_patterns.py  test_arch_capabilities.py  test_arch_memory.py  test_arch_memory_recognizers.py  test_batch_cli.py  test_candidate_models.py  test_cli.py  test_extraction_align.py  test_extraction_blocks.py  test_extraction_build.py  test_extraction_diagnostics.py  test_extraction_emit.py  test_extraction_liveness.py  test_extraction_memory_operands.py  test_extraction_memory_surfaces.py  test_extraction_models.py  test_extraction_object.py  test_extraction_pipeline.py  test_extraction_register_bindings.py  test_extraction_register_cegis.py  test_extraction_register_transfer.py  test_extraction_surfaces.py  test_extraction_windows.py  test_kernel_bind.py  test_kernel_compile_extract.py  test_kernel_models.py  test_kernel_pipeline.py  test_kernel_synthesize.py  test_memory_correctness.py  test_memory_events.py  test_models.py  test_public_api.py  test_relation_checker.py  test_report_taxonomy.py  test_rules_generalize.py  test_rules_memory_generalize.py  test_rules_register_views.py  test_rules_registers.py  test_rules_writer.py  (+11 more)
(+80 files in other folders)
