[project]
name = "angr-rule-learning"
version = "0.1.0"
description = "Rule learning pipeline prototype backed by angr and claripy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "angr>=9.2.221",
    "capstone>=5.0.0",
    "pyelftools>=0.32",
]

[project.scripts]
angr-rule-learning = "angr_rule_learning.cli:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
